<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTweet"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/ivProfilePic"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivProfilePic"
        android:layout_below="@+id/ivProfilePic"
        android:layout_marginTop="26dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTweet"
        android:layout_below="@+id/tvTweet"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etReplyTweet"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/compose_hint"
        android:maxLength="140"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btReply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTime"
        android:layout_below="@+id/etReplyTweet"
        android:layout_marginTop="16dp"
        android:onClick="onReply"
        android:background="#33b5fa"
        android:text="@string/reply_button_label" />

    <TextView
        android:id="@+id/tvCharCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btReply"
        android:layout_marginRight="28dp" />
    
</RelativeLayout>
